--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>HELLO WORLD</title>
+</head>
+
+<body>
 <a href="google.com">Hello World</a>
+</body>
+
+</html>
