--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <div class="intro-container">
 
             <div class="special">
+                <div class="headshot"><img src="img/crackhead.jpg" /></div>
                 <h2>We are professional</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
@@ -87,7 +88,7 @@
                 <div class="carousel-inner" role="listbox">
 
                     <div class="carousel-item active">
-                        <div class="carousel-background"><img src="img/intro-carousel/1.jpg" alt=""></div>
+                        <div class="carousel-background"><img src="img/intro-carousel/super.jpg" alt=""></div>
                         <!--<div class="carousel-container">
                 <div class="carousel-content">
             <h2>We are professional</h2>
@@ -163,7 +164,7 @@
         <!--==========================
           Featured Services Section
         ============================-->
-        <section id="featured-services">
+        <!--<section id="featured-services">
             <div class="container">
                 <div class="row">
 
@@ -187,7 +188,7 @@
 
                 </div>
             </div>
-        </section><!-- #featured-services -->
+        </section>--><!-- #featured-services -->
         <!--==========================
           About Us Section
         ============================-->
