Added social icons, added new images to carousel, carousel background now uses cover for background-size

--- a/index.html
+++ b/index.html
@@ -64,28 +64,42 @@
     <section id="intro">
         <div class="intro-container">
 
-            <div class="special">
-                <div class="headshot"><img src="img/crackhead.jpg" /></div>
-                <h2>Yi Wei Wu (Jackson)</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-
             <div id="introCarousel" class="carousel slide carousel-fade" data-ride="carousel">
                 <ol class="carousel-indicators"></ol>
 
+                <div class="special">
+                    <div class="headshot"><img src="img/crackhead.jpg" /></div>
+                    <h2>Yi Wei Wu (Jackson)</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="container">
+                        <span class="icon-container">
+                            <a href="https://www.linkedin.com/in/yi-wei-wu/"><img class="icon" src="img/icons/linkedin-icon.png" /></a>
+                        </span>
+                        <span class="icon-container">
+                            <a href="https://github.com/oddflavour"><img class="icon" src="img/icons/github-icon.png" /></a>
+                        </span>
+                        
+                    </div>
+                </div>
 
                 <div class="carousel-inner" role="listbox">
 
                     <div class="carousel-item active">
-                        <div class="carousel-background"><img src="img/intro-carousel/super.jpg" alt=""></div>
+                        <div class="carousel-background">
+                            <img src="img/intro-carousel/6.jpg" alt="" />
+                        </div>
                     </div>
 
                     <div class="carousel-item">
-                        <div class="carousel-background"><img src="img/intro-carousel/2.jpg" alt=""></div>
+                        <div class="carousel-background">
+                            <img src="img/intro-carousel/7.jpg" alt="">
+                        </div>
                     </div>
 
                     <div class="carousel-item">
-                        <div class="carousel-background"><img src="img/intro-carousel/3.jpg" alt=""></div>
+                        <div class="carousel-background">
+                            <img src="img/intro-carousel/8.jpg" alt="">
+                        </div>
                     </div>
 
                 </div>
