Adding responsive layout for mobile landscape

--- a/index.html
+++ b/index.html
@@ -69,17 +69,21 @@
 
                 <div class="special">
                     <div class="headshot"><img src="img/crackhead.jpg" /></div>
-                    <h2>Yi Wei Wu (Jackson)</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div>
+                        <h2>Yi Wei Wu (Jackson)</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
                     <div class="container">
+                        Testing float
                         <span class="icon-container">
                             <a href="https://www.linkedin.com/in/yi-wei-wu/"><img class="icon" src="img/icons/linkedin-icon.png" /></a>
                         </span>
                         <span class="icon-container">
                             <a href="https://github.com/oddflavour"><img class="icon" src="img/icons/github-icon.png" /></a>
                         </span>
-                        
+
                     </div>
+                    
                 </div>
 
                 <div class="carousel-inner" role="listbox">
