Finished responsive adaptation to landscape mobile devices

--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
             <div id="introCarousel" class="carousel slide carousel-fade" data-ride="carousel">
                 <ol class="carousel-indicators"></ol>
 
-                <div class="special">
-                    <div class="headshot"><img src="img/crackhead.jpg" /></div>
-                    <div>
+                <div class="special row m-0">
+                    <div class="headshot col-sm-4 col-lg-12"><img src="img/crackhead.jpg" /></div>
+                    <div class="container col-sm-8 col-lg-12">
                         <h2>Yi Wei Wu (Jackson)</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="container">
-                        Testing float
-                        <span class="icon-container">
-                            <a href="https://www.linkedin.com/in/yi-wei-wu/"><img class="icon" src="img/icons/linkedin-icon.png" /></a>
-                        </span>
-                        <span class="icon-container">
-                            <a href="https://github.com/oddflavour"><img class="icon" src="img/icons/github-icon.png" /></a>
-                        </span>
 
+                        <div class="container">
+                            <span class="icon-container">
+                                <a href="https://www.linkedin.com/in/yi-wei-wu/"><img class="icon" src="img/icons/linkedin-icon.png" /></a>
+                            </span>
+                            <span class="icon-container">
+                                <a href="https://github.com/oddflavour"><img class="icon" src="img/icons/github-icon.png" /></a>
+                            </span>
+
+                        </div>
                     </div>
                     
                 </div>
