Tightened restrictions on mobile landscape

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <ol class="carousel-indicators"></ol>
 
                 <div class="special row m-0">
-                    <div class="headshot col-sm-4 col-lg-12"><img src="img/crackhead.jpg" /></div>
-                    <div class="container col-sm-8 col-lg-12">
-                        <h2>Yi Wei Wu (Jackson)</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="headshot col-12"><img src="img/crackhead.jpg" /></div>
+                    <div id="mini-about-me" class="container col-12">
+                        <h2 class="mb-2">Yi Wei Wu (Jackson)</h2>
+                        <p>Eat - Sleep - Code - Recurse - StackOverflowError</p>
 
                         <div class="container">
                             <span class="icon-container">
