Added 'about me' description and removed 'call to action', 'contact us' section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
 
                 <header class="section-header">
                     <h3>About Me</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        My name is Yi Wei Wu or also referred to as Jackson.
+                        I am a student in the Computer Science Specialist (Software Engineering Stream) program at University of Toronto Scarborough.
+                        I love coding but also enjoy experimenting new foods 🍲 and hope to travel outside of Canada more! ✈️🚗🚶‍♂️
+                    </p>
                 </header>
 
             </div>
@@ -140,13 +144,13 @@
         <!--==========================
           Call To Action Section
         ============================-->
-        <section id="call-to-action" class="wow fadeIn">
+        <!--<section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
                 <h3>Call To Action</h3>
                 <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <a class="cta-btn" href="#">Call To Action</a>
             </div>
-        </section><!-- #call-to-action -->
+        </section>--><!-- #call-to-action -->
         <!--==========================
           Portfolio Section
         ============================-->
@@ -154,7 +158,7 @@
             <div class="container">
 
                 <header class="section-header">
-                    <h3 class="section-title">Our Portfolio</h3>
+                    <h3 class="section-title">Portfolio</h3>
                 </header>
 
                 <div class="row">
@@ -309,74 +313,6 @@
 
             </div>
         </section><!-- #portfolio -->
-        <!--==========================
-          Contact Section
-        ============================-->
-        <section id="contact" class="section-bg wow fadeInUp">
-            <div class="container">
-
-                <div class="section-header">
-                    <h3>Contact Us</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
-                </div>
-
-                <div class="row contact-info">
-
-                    <div class="col-md-4">
-                        <div class="contact-address">
-                            <i class="ion-ios-location-outline"></i>
-                            <h3>Address</h3>
-                            <address>A108 Adam Street, NY 535022, USA</address>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="contact-phone">
-                            <i class="ion-ios-telephone-outline"></i>
-                            <h3>Phone Number</h3>
-                            <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="contact-email">
-                            <i class="ion-ios-email-outline"></i>
-                            <h3>Email</h3>
-                            <p><a href="mailto:info@example.com">info@example.com</a></p>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="form">
-                    <div id="sendmessage">Your message has been sent. Thank you!</div>
-                    <div id="errormessage"></div>
-                    <form action="" method="post" role="form" class="contactForm">
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                <div class="validation"></div>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                                <div class="validation"></div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                            <div class="validation"></div>
-                        </div>
-                        <div class="text-center"><button type="submit">Send Message</button></div>
-                    </form>
-                </div>
-
-            </div>
-        </section><!-- #contact -->
-
     </main>
 
     <!--==========================
@@ -385,7 +321,10 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>Yi Wei Wu</strong>. All Rights Reserved
+                &copy; Copyright <strong>Yi Wei Wu</strong>
+                <span id="copyright">
+                    2019-<script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+                </span>
             </div>
             <div class="credits">
                 <!--
