Added placeholder image for headshot

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <ol class="carousel-indicators"></ol>
 
                 <div class="special row m-0">
-                    <div class="headshot col-12"><img src="img/crackhead.jpg" /></div>
+                    <div class="headshot col-12"><img src="img/placeholder.jpg" /></div>
                     <div id="mini-about-me" class="container col-12">
                         <h2 class="mb-2">Yi Wei Wu (Jackson)</h2>
                         <p>Eat - Sleep - Code - Recurse - StackOverflowError</p>
@@ -125,8 +125,8 @@
 
     <main id="main">
         <!--==========================
-          About Us Section
-        ============================-->
+      About Us Section
+    ============================-->
         <section id="about">
             <div class="container">
 
@@ -141,16 +141,7 @@
 
             </div>
         </section><!-- #about -->
-        <!--==========================
-          Call To Action Section
-        ============================-->
-        <!--<section id="call-to-action" class="wow fadeIn">
-            <div class="container text-center">
-                <h3>Call To Action</h3>
-                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a class="cta-btn" href="#">Call To Action</a>
-            </div>
-        </section>--><!-- #call-to-action -->
+
         <!--==========================
           Portfolio Section
         ============================-->
@@ -161,7 +152,7 @@
                     <h3 class="section-title">Portfolio</h3>
                 </header>
 
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-lg-12">
                         <ul id="portfolio-flters">
                             <li data-filter="*" class="filter-active">All</li>
@@ -170,7 +161,7 @@
                             <li data-filter=".filter-web">Web</li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="row portfolio-container">
 
@@ -356,7 +347,7 @@
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
     <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
+    <!--<script src="contactform/contactform.js"></script>-->
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
