--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>BizPage Bootstrap Template</title>
+    <title>Yi Wei Wu</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -44,7 +44,7 @@
         <div class="container-fluid">
 
             <div id="logo" class="pull-left">
-                <h1><a href="#intro" class="scrollto">BizPage</a></h1>
+                <h1><a href="#intro" class="scrollto"></a></h1>
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
             </div>
@@ -149,7 +149,7 @@
             <div class="container">
 
                 <header class="section-header">
-                    <h3 class="section-title">Portfolio</h3>
+                    <h3 class="section-title">Portfolio (PLACEHOLDER)</h3>
                 </header>
 
                 <!--<div class="row">
